# dicom-test-files

./: .gitattributes  LICENSE.txt  Makefile  README.md
.github/workflows/: ci.yml
data/WG04/J2KI/: CT2_J2KI  MG1_J2KI  MR1_J2KI  MR3_J2KI  MR4_J2KI  NM1_J2KI  RG2_J2KI  SC1_J2KI  VL2_J2KI  VL3_J2KI  VL4_J2KI  VL6_J2KI  XA1_J2KI
data/WG04/J2KR/: MR1_J2KR  MR3_J2KR  MR4_J2KR  RG2_J2KR  SC1_J2KR  VL1_J2KR  VL3_J2KR  VL6_J2KR  XA1_J2KR
data/WG04/JLSL/: CT1_JLSL  CT2_JLSL  MR1_JLSL  MR2_JLSL  MR3_JLSL  MR4_JLSL  NM1_JLSL  RG3_JLSL  SC1_JLSL  XA1_JLSL
data/WG04/JLSN/: MR1_JLSN  MR3_JLSN  MR4_JLSN  NM1_JLSN  RG3_JLSN  SC1_JLSN  XA1_JLSN
data/WG04/JPLL/: MR2_JPLL  MR3_JPLL  MR4_JPLL  RG3_JPLL  SC1_JPLL  XA1_JPLL
data/WG04/JPLY/: MG1_JPLY  MR2_JPLY  MR3_JPLY  MR4_JPLY  RG3_JPLY  SC1_JPLY  XA1_JPLY
data/WG04/REF/: CT1_UNC.zst  CT2_UNC.zst  MR1_UNC.zst  MR2_UNC.zst  MR3_UNC.zst  MR4_UNC.zst  NM1_UNC.zst  RG2_UNC.zst  RG3_UNC.zst  SC1_UNC.zst  US1_UNC.zst  VL1_UNC.zst  VL2_UNC.zst  VL3_UNC.zst  VL6_UNC.zst  XA1_UNC.zst
data/WG04/RLE/: CT2_RLE  MR1_RLE  MR2_RLE  MR3_RLE  MR4_RLE  NM1_RLE  RG2_RLE  SC1_RLE  US1_RLE  VL1_RLE  VL2_RLE  VL3_RLE  VL6_RLE  XA1_RLE
data/dcmqi/: LICENSE.txt
data/dcmqi/paramaps/701-ADCb500/: 000000.dcm.zst  000001.dcm.zst  000002.dcm.zst  000003.dcm.zst  000004.dcm.zst  000005.dcm.zst  000006.dcm.zst  000007.dcm.zst  000008.dcm.zst  000009.dcm.zst  000010.dcm.zst  000011.dcm.zst  000012.dcm.zst  000013.dcm.zst  000014.dcm.zst  000015.dcm.zst  000016.dcm.zst  000017.dcm.zst  000018.dcm.zst  000019.dcm.zst
data/dcmqi/segmentations/: liver.dcm.zst  partial_overlaps.dcm.zst
data/dcmqi/sr-example/: rwvm.dcm.zst  seg.dcm.zst  sr.dcm.zst
data/pydicom/: README.txt
generate/: generate.py
rust/: Cargo.toml  build.rs
rust/src/: entries.rs  hashes.rs  lib.rs  test_file.rs
(+13 files in other folders)
