[package]
name = "dicom-test-files"
version = "0.2.0"
authors = ["Rob Young <rob@robyoung.digital>"]
edition = "2018"
description = "A collection of DICOM files for testing DICOM parsers." 
license-file = "../LICENSE.txt"
keywords = ["DICOM", "medical", "image"]
categories = ["development-tools::testing", "parsing"]

[dependencies]
ureq = "2.4"
sha2 = "0.10"
tempfile = "3.3.0"

[build-dependencies]
sha2 = "0.10"
