[package]
name = "dicom-test-files"
version = "0.2.1"
authors = ["Rob Young <rob@robyoung.digital>"]
edition = "2018"
description = "A collection of DICOM files for testing DICOM parsers." 
license-file = "../LICENSE.txt"
keywords = ["DICOM", "medical", "image"]
categories = ["development-tools::testing", "parsing"]
readme = "../README.md"

[features]
default = ["zstd"]
zstd = ["dep:zstd"]

[dependencies]
ureq = "2.4"
sha2 = "0.10"
tempfile = "3.3.0"

[dependencies.zstd]
version = "0.12.4"
default-features = false
optional = true

[build-dependencies]
sha2 = "0.10"
