[package]
name = "dicom-test-files"
version = "0.3.0"
authors = ["Rob Young <rob@robyoung.digital>", "Eduardo Pinho <enet4mikeenet@gmail.com>"]
edition = "2018"
description = "A collection of DICOM files for testing DICOM parsers." 
repository = "https://github.com/robyoung/dicom-test-files"
license-file = "../LICENSE.txt"
keywords = ["DICOM", "medical", "image", "dataset"]
categories = ["development-tools::testing", "parsing"]
readme = "../README.md"

[features]
default = ["zstd"]
zstd = ["dep:zstd"]

[dependencies]
ureq = "2.4"
sha2 = "0.10"
tempfile = "3.3.0"

[dependencies.zstd]
version = "0.12.4"
default-features = false
optional = true

[build-dependencies]
sha2 = "0.10"
